More work on interactions. Fix to not showing count of lightbox view

--- a/app/assets/stylesheets/albums.css.scss
+++ b/app/assets/stylesheets/albums.css.scss
@@ -224,11 +224,11 @@ a.btn {
 
 .fancybox-title {
   .fave_controls{
-    opacity: 0;  filter: alpha(opacity=0);
-    -webkit-transition: opacity .5s ease;
-    -moz-transition: opacity .5s ease;
-    -o-transition: opacity .5s ease;
-    transition: opacity .5s ease;
+        opacity: 0;  filter: alpha(opacity=0);
+        -webkit-transition: opacity .5s ease;
+        -moz-transition: opacity .5s ease;
+        -o-transition: opacity .5s ease;
+        transition: opacity .5s ease;
 		position: absolute;
         bottom: 112px;
         @media (max-width: 768px) {
@@ -239,13 +239,9 @@ a.btn {
 		color: $white;
 		cursor: pointer;
 		.fave_corner{
-
             img{
               width: 150%;
             }
-            //margin-top: 30px;
-            //margin-left: 10px;
-            //margin-bottom: 20px;
 			p{
 				//margin: -20px 20px 0px 0px;
 				a{
@@ -269,27 +265,27 @@ a.btn {
     display: block;
     opacity: 1;  filter: alpha(opacity=100);
   }
-	.fave_count{
-		position: absolute;
-		bottom: 65px;
-        @media (max-width: 768px) {
-          bottom: 42px;
-        }
-		right: 15px;
-		background: #000;
-		width: 35px;
-		height: 35px;
-		border-radius: 50%;
-        opacity: 0.75;
-		font-size: 15px;
-		p{
-            text-align: center;
-            font-size: x-large;
-			margin-top: 10px;
-            color: white;
-            font-family: 'GothamMedium';
-		}
-	}
+  .fave_count{
+    position: absolute;
+    bottom: 55px;
+    @media (max-width: 768px) {
+      bottom: 42px;
+    }
+    right: 15px;
+    background: #000;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    opacity: 0.75;
+    font-size: 15px;
+    p{
+      text-align: center;
+      font-size: x-large;
+      margin-top: 2px;
+      color: white;
+      font-family: 'GothamMedium';
+    }
+  }
 }
 
 .social{
