--- a/app/assets/stylesheets/jquery.fancybox.css.scss
+++ b/app/assets/stylesheets/jquery.fancybox.css.scss
@@ -174,6 +174,7 @@ a.fancybox-next span {
 }
 
 a.fancybox-expand {
+  visibility: hidden;
   position: absolute;
   bottom: 0;
   right: 0;
